--- a/style.css
+++ b/style.css
@@ -504,10 +504,13 @@ textarea {
   backdrop-filter: blur(5px);
   box-shadow: 10px 10px 50px rgb(85, 84, 84);
  }
+ .header__content{
+          margin-left: 8%;
+ }
   .header__content {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding: 1rem 5rem; }
     @media only screen and (max-width: 56.25em) {
       .header__content {
@@ -539,7 +542,7 @@ textarea {
     object-position: center;
     display: block; }
   .header__logo-sub {
-    font-size: 2.48rem;
+    font-size: 2.rem;
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 1px; }
