--- a/style.css
+++ b/style.css
@@ -771,7 +771,7 @@ textarea {
       color: #0e2431;
     }
     header .logo i {
-      font-size: 2.2rem;
+      font-size: 18px;
     }
     header .logo:hover {
       color: #fc8c05;
