--- a/style.css
+++ b/style.css
@@ -541,8 +541,9 @@ textarea {
     object-fit: cover;
     object-position: center;
     display: block; }
-  .header__logo-sub {
-    font-size: 2.rem;
+ .header__logo-sub {
+    font-size:20px;
+    color: rgb(8, 8, 158);
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 1px; }
